# dogen

./: .appveyor.yml  .clang-format  .clang-tidy  .conanfile.txt  .ctest.cmake  .dogen.ede  .drone.yml  .gitignore  .gitmodules  .travis.yml  0001-sml-rename-parse_qualified_name-to-parse_qname.patch  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.org  CTest.cmake  CTestConfig.cmake  LICENCE  README.md  README.org  appveyor.yml  codecov.yml  conanfile.txt  dogen.ede  implement_primitives_test_data_implementation.patch  latest_changes_for_tagging.patch  odb_options_refactor.patch  packages.config  vcpkg.json
data/: CMakeLists.txt
data/annotations/: annotations.json  annotations.profiles.core.disable_all_facets.json  annotations.profiles.core.enable_all_facets.json  annotations.profiles.dogen.artefact_formatter.json  annotations.profiles.dogen.cpp_artefact_formatter.json  annotations.profiles.dogen.cpp_helper_formatter.json  annotations.profiles.dogen.csharp_artefact_formatter.json  annotations.profiles.dogen.csharp_helper_formatter.json  annotations.profiles.dogen.disable_all_facets.json  annotations.profiles.dogen.disable_cmake.json  annotations.profiles.dogen.disable_common_facets.json  annotations.profiles.dogen.disable_common_facets_temp.json  annotations.profiles.dogen.disable_common_facets_temp2.json  annotations.profiles.dogen.disable_common_facets_temp3.json  annotations.profiles.dogen.disable_facet_directories.json  annotations.profiles.dogen.disable_odb.json  annotations.profiles.dogen.disable_odb_cmake.json  annotations.profiles.dogen.enable_cmake.json  annotations.profiles.dogen.enable_cmake_types.json  annotations.profiles.dogen.enable_cmake_types_hash.json  annotations.profiles.dogen.enable_cmake_types_io.json  annotations.profiles.dogen.enable_cmake_types_serialization.json  annotations.profiles.dogen.formatter_helper.json  annotations.profiles.dogen.handcrafted.json  annotations.profiles.dogen.helper_formatter.json  annotations.profiles.dogen.json  annotations.profiles.dogen.pretty_printable.json  annotations.profiles.dogen.stitch.json  annotations.type_templates.annotations.json  annotations.type_templates.configuration.json  annotations.type_templates.formatters.json  annotations.type_templates.injection.json  annotations.type_templates.masd.cpp.hash.json  annotations.type_templates.masd.cpp.io.json  annotations.type_templates.masd.cpp.json  annotations.type_templates.masd.cpp.odb.json  annotations.type_templates.masd.cpp.serialization.json  annotations.type_templates.masd.cpp.test_data.json  annotations.type_templates.masd.cpp.tests.json  annotations.type_templates.masd.cpp.types.json  (+72 more)
data/fields/: cpp.hash.json  cpp.io.json  cpp.json  cpp.odb.json  cpp.serialization.json  cpp.test_data.json  cpp.types.json  dia_to_sml.json  formatters.json  quilt.cpp.hash.json  quilt.cpp.io.json  quilt.cpp.json  quilt.cpp.odb.json  quilt.cpp.serialization.json  quilt.cpp.test_data.json  quilt.cpp.types.json  stitch.json  yarn.dia.json  yarn.json
data/licences/: apache_v2_0  bsl_v1_0  gpl_v2  gpl_v3  proprietary
data/mappings/: default.mapping_set.json  element_mappings.json
data/modeline_groups/: emacs  emacs.json  vi  vim.json
data/preamble_schemes/: emacs  vi
data/preambles/: emacs
data/profiles/: annotations.profiles.dogen.disable_cmake.json  annotations.profiles.dogen.enable_all_facets.json  annotations.profiles.dogen.enable_cmake_types.json  annotations.profiles.dogen.enable_cmake_types_hash.json  annotations.profiles.dogen.enable_cmake_types_io.json  core.disable_all_facets.json  core.enable_all_facets.json  default.json  dogen.disable_all_facets.json  dogen.disable_cmake.json  dogen.disable_odb.json  dogen.disable_odb_cmake.json  dogen.enable_all_facets.json  dogen.enable_types.json  dogen.enable_types_hash.json  dogen.enable_types_io.json  dogen.enable_types_serialization.json  dogen.formatters.json  dogen.handcrafted.json  dogen.json  sample
data/profiles_v2/: core.disable_all_facets.json  core.enable_all_facets.json  default.json  dogen.disable_cmake.json  dogen.disable_odb.json  dogen.enable_types.json  dogen.enable_types_hash.json  dogen.enable_types_io.json  dogen.enable_types_serialization.json  dogen.json
data/variability/: masd.variability.feature_templates.configuration.json  masd.variability.feature_templates.formatters.json  masd.variability.feature_templates.injection.json  masd.variability.feature_templates.masd.cpp.hash.json  masd.variability.feature_templates.masd.cpp.io.json  masd.variability.feature_templates.masd.cpp.json  masd.variability.feature_templates.masd.cpp.test_data.json  masd.variability.feature_templates.masd.cpp.types.json  masd.variability.feature_templates.masd.csharp.json  masd.variability.feature_templates.masd.csharp.types.json  masd.variability.feature_templates.masd.json  masd.variability.feature_templates.variability.json  masd.variability.profiles.dogen.disable_common_facets.json  masd.variability.profiles.dogen.disable_facet_directories.json  masd.variability.profiles.dogen.disable_odb.json  masd.variability.profiles.dogen.disable_odb_cmake.json  masd.variability.profiles.dogen.json
data/wale/: artefact_formatter_header.wale  artefact_formatter_implementation.wale  artefact_formatter_implementation_header.wale  cpp_artefact_formatter_header.wale  cpp_artefact_formatter_implementation.wale  cpp_artefact_formatter_implementation_header.wale  cpp_helper_formatter_implementation.wale  cpp_helper_formatter_implementation_enabled.wale  csharp_artefact_formatter_header.wale  csharp_formatter_implementation.wale  csharp_helper_formatter_header.wale  csharp_helper_formatter_implementation.wale  helper_formatter_header.wale  helper_formatter_implementation.wale  helper_formatter_implementation_enabled.wale
projects/: CMakeLists.txt  indexing.patch  masd.dogen.gene
projects/all_primitives/: CMakeLists.txt
projects/annotations/: CMakeLists.txt
projects/boost_model/: CMakeLists.txt
projects/class_in_a_package/: CMakeLists.txt
share/: CMakeLists.txt
test_data/: CMakeLists.txt
(+53374 files in other folders)
